--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
 
-  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -17,8 +16,11 @@
       integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-  </head>
+    <script defer src="./assets/js/script.js"></script>
+    <script defer src="./assets/js/config.js"></script>
+
 </head>
+
 
 <body>
   <header>
@@ -29,45 +31,46 @@
 
   <main>
     <aside>
-      <input id="location" placeholder="Enter Location." type="text"></textarea>
       <div>
-        <button id="search" class="button">search!</button>
-      </div>
+        <form id="input">  <!-- user-input -->
+          <input id = "location" placeholder="Enter Location." type="text"/> <!-- city-name -->
+          <button type="submit" class="button">search!</button> <!-- type submit class btn -->
+        </form>
+      </div> 
       <div>
-        <ul id="recent"></ul>
+        <ul id="recent-btns"></ul> <!-- recent-search-buttons -->
       </div>
 
     </aside>
 
     <section>
-      <h2 id="locationName">Location</h2>
+      <h2 class="locationName">Location</h2> <!--current-city-->
       <div id="todayBlock" class="column time-block">
         <ul>
-          <strong>Today</strong>
+          <strong>Today <img class = "todayIcon"> <br> </strong>
           <br>
-          <li class="TDTemp">Temp: </li>
+          <li class="TDTemp">Temp:  <span class='today-temp'></span></li>
           <br>
-          <li class="TDWind">Wind: </li>
+          <li class="TDWind">Wind: <span class='today-wind'></span></li>
           <br>
-          <li class="TDHumidity">Humidity: </li>
+          <li class="TDHumidity">Humidity: <span class='today-humid'></span></li>
         </ul>
       </div>
       <div id="tomorrowBlock" class="column time-block">
         <ul>
-          <strong>Tomorrow</strong>
+          <strong>Tomorrow <img class = "tomorrowIcon"> <br></strong>
           <br>
-          <li class="TWTemp">Temp: </li>
+          <li class="TWTemp">Temp:  <span class='tomorrow-temp'></span></li>
           <br>
-          <li class="TWWind">Wind: </li>
+          <li class="TWWind">Wind: <span class='tomorrow-wind'></span></li>
           <br>
-          <li class="TWHumidity">Humidity: </li>
+          <li class="TWHumidity">Humidity: <span class='tomorrow-humid'></span></li>
         </ul>
       </div>
     </section>
   </main>
 
-  <script src="./assets/js/script.js"></script>
-  <script src="./assets/js/config.js"></script>
+  
 </body>
 
 </html>
